глупая очепятка в readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
 == 9april.ru
 
-Информационный проект в честь очередной годовщины взятия Кенигсберга 9го мая 1945 года
+Информационный проект в честь очередной годовщины взятия Кенигсберга 9го апреля 1945 года
 
