переместил весь текст в языковые файлы

--- a/config/locales/site.yml
+++ b/config/locales/site.yml
@@ -1,2 +1,7 @@
 ru:
   index_page_text: Кёнигсбергская операция (6—9 апреля 1945) — военная операция вооружённых сил СССР против немецких войск в ходе Великой Отечественной войны с целью ликвидации кенигсбергской группировки противника и захвата города-крепости Кёнигсберг, часть Восточно-Прусской операции 1945 года.
+  top_photos_title: Фотохроника штурма
+  previous_days: Предыдущие дни
+  arhive_posts_index: Дневник взятия
+  archive_index_title: Ахрив штурма Кенигсберга
+  photos_index_title: Фотоархив взятия Кенигсберга
