--- a/config/locales/site.yml
+++ b/config/locales/site.yml
@@ -3,5 +3,5 @@ ru:
   top_photos_title: Фотохроника штурма
   previous_days: Предыдущие дни
   arhive_posts_index: Дневник взятия
-  archive_index_title: Хроника штурма кенигсберга
+  archive_index_title: Хроника штурма Кенигсберга
   photos_index_title: Фотоархив взятия Кенигсберга
